--- a/res/layout/apkinfo.xml
+++ b/res/layout/apkinfo.xml
@@ -6,15 +6,15 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
- 
+         
         <TextView
             android:id="@+id/apk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
+            android:layout_below="@+id/appiconimage"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="24dp"
+            android:layout_marginTop="10dp"
+            android:textSize="15sp"
             android:text="@string/apkname"
             android:textStyle="bold" />
  
@@ -23,7 +23,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/apk"
-            android:paddingLeft="24dp" />
+            android:paddingLeft="24dp" 
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/pack_name"
@@ -31,135 +32,152 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/applabel"
             android:layout_marginLeft="18dp"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:text="@string/package_name"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/package_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/pack_name"
-            android:paddingLeft="24dp"  />
+            android:paddingLeft="24dp"  
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/package_name"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/version"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/version_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/version"
-            android:paddingLeft="24dp"  />
+            android:paddingLeft="24dp"  
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/features"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/version_name"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/features"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/req_feature"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/features"
-            android:paddingLeft="24dp" />
+            android:paddingLeft="24dp" 
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/permissions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/req_feature"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/permissions"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/req_permission"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/permissions"
-            android:paddingLeft="24dp" />
+            android:paddingLeft="24dp" 
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/path_info"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/req_permission"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/path_info"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/path"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/path_info"
-            android:paddingLeft="24dp"  />
+            android:paddingLeft="24dp"  
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/and_version"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/path"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/req_version"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/andversion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/and_version"
-            android:paddingLeft="24dp"  />
+            android:paddingLeft="24dp"  
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/installed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/andversion"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/installed"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/insdate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/installed"
-            android:paddingLeft="24dp"  />
+            android:paddingLeft="24dp"  
+            android:textSize="12sp"/>
  
         <TextView
             android:id="@+id/modified"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/insdate"
-            android:layout_marginTop="15dp"
+            android:layout_marginTop="10dp"
             android:layout_marginLeft="18dp"
             android:text="@string/modified"
-            android:textStyle="bold" />
+            android:textStyle="bold" 
+            android:textSize="15sp"/>
  
         <TextView
             android:id="@+id/last_modify"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/modified"
-            android:paddingLeft="24dp" />
+            android:paddingLeft="24dp" 
+            android:textSize="12sp"/>
+
     </RelativeLayout>
  
 </ScrollView>
