--- a/res/layout/activity_gwmain.xml
+++ b/res/layout/activity_gwmain.xml
@@ -254,14 +254,14 @@
         android:textSize="10sp"
         android:textStyle="italic" />
 
-    <!-- <TextView
+    <TextView
         android:id="@+id/GWPgkGames"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/bShowLogcat"
         android:layout_centerHorizontal="true"
         android:textSize="12sp"
-        android:textStyle="italic" />  --> 
+        android:textStyle="italic" /> 
 
     <TextView
         android:id="@+id/showLogcat"
