--- a/res/layout/activity_splash.xml
+++ b/res/layout/activity_splash.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/lin_lay"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/android1"
-    android:id="@+id/lin_lay"
-    android:orientation="vertical" >
+    android:orientation="vertical" 
+    android:background="@drawable/glassworksdeviceinfo1">
+    
+   <!-- <com.comscience15.glassworkdeviceinfo
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" /> -->
 
    <!-- <ImageView
         android:layout_width="wrap_content"
