--- a/res/menu/gwmain.xml
+++ b/res/menu/gwmain.xml
@@ -1,18 +1,9 @@
-<!-- <menu xmlns:android="http://schemas.android.com/apk/res/android" >
-
-    <item
-        android:id="@+id/showGlassworkPgkNames"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
-
-</menu> -->
-    <menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
         
-        <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+	<item
+		android:id="@+id/aboutUs"
+		android:orderInCategory="100"
+	    android:showAsAction="never"
+	    android:title="@string/about_us"/>
         
-    </menu>
+</menu>
